[gd_scene load_steps=21 format=3 uid="uid://dygp47ne4yrk"]

[ext_resource type="Script" path="res://menu/deckeditor.gd" id="1_xmlmp"]
[ext_resource type="Texture2D" uid="uid://cfh266shcydlg" path="res://images/background/Monster_Tree_S4.png" id="2_swfgw"]
[ext_resource type="Texture2D" uid="uid://dlyokv6u0inno" path="res://images/buttons/Deck Builder UI/Stop Editing.png" id="3_xiomt"]
[ext_resource type="Texture2D" uid="uid://ce4iborxqp36u" path="res://images/buttons/Deck Builder UI/Stop Editing Push.png" id="4_tsxh0"]
[ext_resource type="Texture2D" uid="uid://bvs8dxfxkjn8s" path="res://images/buttons/Deck Builder UI/Stop Editing Hover.png" id="5_jxyek"]
[ext_resource type="Texture2D" uid="uid://bmgvxabpvhdos" path="res://images/buttons/Deck Builder UI/Clear Deck.png" id="6_21pk5"]
[ext_resource type="Texture2D" uid="uid://q8e5ht3po244" path="res://images/buttons/Deck Builder UI/Clear Deck Push.png" id="7_hojdw"]
[ext_resource type="Texture2D" uid="uid://dckmd7fqtjba0" path="res://images/buttons/Deck Builder UI/Clear Deck Hover.png" id="8_nm62o"]
[ext_resource type="Texture2D" uid="uid://bqg8t80fg77kw" path="res://images/buttons/Deck Builder UI/Reset Deck .png" id="9_m6vp6"]
[ext_resource type="Texture2D" uid="uid://c0b0oitytcnd3" path="res://images/buttons/Deck Builder UI/Reset Deck Push.png" id="10_o8jfq"]
[ext_resource type="Texture2D" uid="uid://dj02nvamkxxec" path="res://images/buttons/Deck Builder UI/Reset Deck Hover.png" id="11_e17wt"]
[ext_resource type="Texture2D" uid="uid://bhshcis41pj7k" path="res://images/buttons/Deck Builder UI/Reset.png" id="12_b2prm"]
[ext_resource type="Texture2D" uid="uid://cxe4y1hqwwf3t" path="res://images/buttons/Deck Builder UI/Reset Push.png" id="13_eb1ji"]
[ext_resource type="Texture2D" uid="uid://dnc4q7vdm6t02" path="res://images/buttons/Deck Builder UI/Reset Hover.png" id="14_hwn3e"]
[ext_resource type="Texture2D" uid="uid://cqegtpkk64fki" path="res://images/buttons/Save/Save Disk.png" id="15_ukorp"]
[ext_resource type="Texture2D" uid="uid://bgglbwu7h3s3h" path="res://images/buttons/Save/Save Disk Push.png" id="16_b1j6n"]
[ext_resource type="Texture2D" uid="uid://c4sxh1p6ere73" path="res://images/buttons/Save/Save Disk Hover.png" id="17_q6vuv"]
[ext_resource type="Texture2D" uid="uid://xey8bqjs3ksx" path="res://images/buttons/Load From Disk/Load From Disk.png" id="18_sfklm"]
[ext_resource type="Texture2D" uid="uid://di26tycdcf6dm" path="res://images/buttons/Load From Disk/Load From Disk Push.png" id="19_ttkao"]
[ext_resource type="Texture2D" uid="uid://dhyqn71b3k78s" path="res://images/buttons/Load From Disk/Load From Disk Hover.png" id="20_ko333"]

[node name="deckeditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmlmp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_swfgw")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0117188
anchor_top = 0.0208333
anchor_right = 0.758789
anchor_bottom = 0.989583
offset_right = 318.75
offset_bottom = 232.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5
metadata/_edit_use_anchors_ = true

[node name="Save" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.803906
anchor_top = 0.841667
anchor_right = 0.9615
anchor_bottom = 0.980333
offset_left = 1.0
offset_top = -6.0
offset_right = -0.720093
offset_bottom = -5.84003
texture_normal = ExtResource("3_xiomt")
texture_pressed = ExtResource("4_tsxh0")
texture_hover = ExtResource("5_jxyek")
metadata/_edit_use_anchors_ = true

[node name="Clear" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.804688
anchor_top = 0.680556
anchor_right = 0.960938
anchor_bottom = 0.819445
offset_top = -3.05176e-05
texture_normal = ExtResource("6_21pk5")
texture_pressed = ExtResource("7_hojdw")
texture_hover = ExtResource("8_nm62o")
metadata/_edit_use_anchors_ = true

[node name="Reset" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.804688
anchor_top = 0.527778
anchor_right = 0.960938
anchor_bottom = 0.666667
texture_normal = ExtResource("9_m6vp6")
texture_pressed = ExtResource("10_o8jfq")
texture_hover = ExtResource("11_e17wt")
metadata/_edit_use_anchors_ = true

[node name="FullReset" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.804688
anchor_top = 0.375
anchor_right = 0.960938
anchor_bottom = 0.513889
texture_normal = ExtResource("12_b2prm")
texture_pressed = ExtResource("13_eb1ji")
texture_hover = ExtResource("14_hwn3e")
metadata/_edit_use_anchors_ = true

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
anchor_left = 0.804688
anchor_top = 0.222222
anchor_right = 0.960938
anchor_bottom = 0.361111
texture_normal = ExtResource("15_ukorp")
texture_pressed = ExtResource("16_b1j6n")
texture_hover = ExtResource("17_q6vuv")
metadata/_edit_use_anchors_ = true

[node name="Button2" type="TextureButton" parent="."]
layout_mode = 0
anchor_left = 0.804688
anchor_top = 0.0694444
anchor_right = 0.960938
anchor_bottom = 0.208333
texture_normal = ExtResource("18_sfklm")
texture_pressed = ExtResource("19_ttkao")
texture_hover = ExtResource("20_ko333")
metadata/_edit_use_anchors_ = true

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(60, 50)
size = Vector2i(1152, 648)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.rootdeck")

[connection signal="pressed" from="Save" to="." method="save"]
[connection signal="pressed" from="Clear" to="." method="clear"]
[connection signal="pressed" from="Reset" to="." method="reset"]
[connection signal="pressed" from="FullReset" to="." method="fullReset"]
[connection signal="pressed" from="Button" to="." method="saveToDisk"]
[connection signal="pressed" from="Button2" to="." method="openLoad"]
[connection signal="file_selected" from="FileDialog" to="." method="loadDeck"]
